AM_CXXFLAGS = -I$(top_srcdir)/src $(SWGANH_CXXFLAGS)

# ZoneServer - executable
bin_PROGRAMS = zoneserver

zoneserver_SOURCES = \
	ActiveConversation.cpp \
	AdminManager.cpp \
	AttackableCreature.cpp \
	AttackableStaticNpc.cpp \
	BadgeRegion.cpp \
	BadgeRegionFactory.cpp \
	Bank.cpp \
	BankTerminal.cpp \
	BazaarTerminal.cpp \
	Buff.cpp \
	BuffDBItem.cpp \
	BuffEvent.cpp \
	BuffManager.cpp \
	BuildingFactory.cpp \
	BuildingObject.cpp \
	Camp.cpp \
	CampRegion.cpp \
	CampTerminal.cpp \
	CellFactory.cpp \
	CellObject.cpp \
	CharacterBuilderTerminal.cpp \
	CharacterLoginHandler.cpp \
	CharSheetManager.cpp \
	City.cpp \
	CityFactory.cpp \
	CloningTerminal.cpp \
	CombatManager.cpp \
	Container.cpp \
	ContainerObjectFactory.cp \
	Conversation.cpp \
	ConversationManager.cpp \
	CraftBatch.cpp \
	CraftingSession.cpp \
	CraftingSessionFactory.cpp \
	CraftingStation.cpp \
	CraftingTool.cpp \
	CreatureEventFunctions.cpp \
	CreatureFactory.cpp \
	CreatureObject.cpp \
	CreatureSpawnRegion.cpp \
	CurrentResource.cpp \
	Datapad.cpp \
	DatapadFactory.cpp \
	Deed.cpp \
	DraftSchematic.cpp \
	DraftSlot.cpp \
	DraftWeight.cpp \
	ElevatorTerminal.cpp \
	EnqueueValidator.cpp \
	EntertainerManager.cpp \
	EquipManager.cpp \
	EVAbility.cpp \
	EVCmdProperty.cpp \
	EVPosture.cpp \
	EVQueueSize.cpp \
	EVState.cpp \
	EVSurveySample.cpp \
	EVWeapon.cpp \
	FactoryBase.cpp \
	FillerNPC.cpp \
	Firework.cpp \
	FireworkManager.cpp \
	Food.cpp \
	Furniture.cpp \
	GroupManager.cpp \
	GroupManagerHandler.cpp \
	Ham.cpp \
	HamProperty.cpp \
	HarvesterFactory.cpp \
	HarvesterObject.cpp \
	Heightmap.cpp \
	ImageDesignManager.cpp \
	Instrument.cpp \
	InsuranceTerminal.cpp \
	IntangibleFactory.cpp \
	IntangibleObject.cpp \
	Inventory.cpp \
	InventoryFactory.cpp \
	Item.cpp \
	ItemFactory.cpp \
	LairObject.cpp \
	ManufacturingSchematic.cpp \
	Medicine.cpp \
	MedicManager.cpp \
	MissionBag.cpp \
	MissionFactory.cpp \
	MissionManager.cpp \
	MissionObject.cpp \
	MissionTerminal.cpp \
	MovingObject.cpp \
	noiseutils.cpp \
	nonPersistantObjectFactory.cpp \
	NonPersistentItemFactory.cpp \
	NonPersistentNpcFactory.cpp \
	NpcManager.cpp \
	NPCObject.cpp \
	ObjControllerCommandMessage.cpp \
	ObjControllerEvent.cpp \
	Object.cpp \
	ObjectContainer.cpp \
	ObjectController.cpp \
	ObjectControllerCommandMap.cpp \
	ObjectControllerDispatch.cpp \
	ObjectFactory.cpp \
	ObjectFactoryCallback.cpp \
	OCAdminHandlers.cpp \
	OCArtisanHandlers.cpp \
	OCBioEngineerHandlers.cpp \
	OCBountyHunterHandlers.cpp \
	OCCallbackHandlers.cpp \
	OCCarbineerHandlers.cpp \
	OCCharacterSheethandlers.cpp \
	OCCombatHandlers.cpp \
	OCCombatMedicHandlers.cpp \
	OCCommandoHandlers.cpp \
	OCCommonHandlers.cpp \
	OCContactListsHandlers.cpp \
	OCCraftingHandlers.cpp \
	OCCreatureHandlerHandlers.cpp \
	OCDatapadHandlers.cpp \
	OCDataTransformhandlers.cpp \
	OCDestroyHandlers.cpp \
	OCDoctorHandlers.cpp \
	OCEntertainerHandlers.cpp \
	OCFencerHandlers.cpp \
	OCForceDefenseHandlers.cpp \
	OCForceEnhancementHandlers.cpp \
	OCForceHealingHandlers.cpp \
	OCForceLightsaberHandlers.cpp \
	OCForcePowerHandlers.cpp \
	OCGroupHandlers.cpp \
	OCMarksmanHandlers.cpp \
	OCMedicHandlers.cpp \
	OCMissionHandlers.cpp \
	OCNpcConversationhandlers.cpp \
	OCPetHandlers.cpp \
	OCPikemanHandlers.cpp \
	OCPistoleerHandlers.cpp \
	OCPostureHandlers.cpp \
	OCRangerHandlers.cpp \
	OCResourceContainerHandlers.cpp \
	OCRiflemanHandlers.cpp \
	OCScoutHandlers.cpp \
	OCSkillHandlers.cpp \
	OCSmugglerHandlers.cpp \
	OCSpatialHandlers.cpp \
	OCSquadLeaderHandlers.cpp \
	OCStructureHandlers.cpp \
	OCSwordsmanHandlers.cpp \
	OCTerasKasiHandlers.cpp \
	OCTradeHandlers.cpp \
	PersistentNpcFactory.cpp \
	PlayerEventFunctions.cpp \
	PlayerObject.cpp \
	PlayerObjectFactory.cpp \
	PlayerStructure.cpp \
	ProcessValidator.cpp \
	PVHam.cpp \
	PVPosture.cpp \
	PVState.cpp \
	QTRegion.cpp \
	QTRegionFactory.cpp \
	QuadTree.cpp \
	QuadTreeNode.cpp \
	QuestGiver.cpp \
	RadialMenu.cpp \
	RadialMenuItem.cpp \
	RegionFactory.cpp \
	RegionObject.cpp \
	Resource.cpp \
	ResourceCategory.cpp \
	ResourceCollectionCommand.cpp \
	ResourceCollectionManager.cpp \
	ResourceContainer.cpp \
	ResourceContainerFactory.cpp \
	ResourceManager.cpp \
	ResourceType.cpp \
	SchematicGroup.cpp \
	SchematicManager.cpp \
	Scout.cpp \
	ScoutManager.cpp \
	Shuttle.cpp \
	ShuttleFactory.cpp \
	Skill.cpp \
	SkillManager.cpp \
	SpawnRegion.cpp \
	SpawnRegionFactory.cpp \
	StaticObject.cpp \
	Stomach.cpp \
	StructureManager.cpp \
	SurveyTool.cpp \
	TangibleFactory.cpp \
	TangibleObject.cpp \
	Terminal.cpp \
	TerminalFactory.cpp \
	TicketCollector.cpp \
	TicketCollectorFactory.cpp \
	Trade.cpp \
	TradeManager.cpp \
	Trainer.cpp \
	TravelMapHandler.cpp \
	TravelTerminal.cpp \
	TravelTicket.cpp \
	TreasuryManager.cpp \
	Tutorial.cpp \
	UIButton.cpp \
	UIDropdownBox.cpp \
	UIElement.cpp \
	UIInputBox.cpp \
	UIInputField.cpp \
	UIListBox.cpp \
	UIManager.cpp \
	UIMessageBox.cpp \
	UITransferBox.cpp \
	UIWindow.cpp \
	Vehicle.cpp \
	VehicleFactory.cpp \
	WaypointFactory.cpp \
	WaypointObject.cpp \
	Weapon.cpp \
	Wearable.cpp \
	WeightsBatch.cpp \
	WorldConfig.cpp \
	WorldManager.cpp \
	ZoneServer.cpp \
	ZoneTree.cpp
	
zoneserver_CPPFLAGS = $(MYSQL_CFLAGS) -I$(top_srcdir)/deps/spatialindex/include -I$(top_srcdir)/deps/spatialindex/tools/include -I$(top_srcdir)/deps/noise/src -Wall -fshort-wchar -Wno-invalid-offsetof
zoneserver_LDADD = \
	../Utils/libutils.la \
	../LogManager/liblogmanager.la \
	../Common/libcommon.la \
	../ConfigManager/libconfigmanager.la \
	../DatabaseManager/libdatabasemanager.la \
	../NetworkManager/libnetworkmanager.la \
	../ScriptEngine/libscriptengine.la \
	../MessageLib/libmessagelib.la \
	$(MYSQL_LDFLAGS) \
	$(BOOST_LDFLAGS) \
	$(BOOST_THREAD_LIB) \
	$(BOOST_SYSTEM_LIB)
	