AM_CXXFLAGS = -I$(top_srcdir)/src $(BOOST_CPPFLAGS) @AM_CXXFLAGS@

# ZoneServer - executable
bin_PROGRAMS = zoneserver

zoneserver_SOURCES = \
	ActiveConversation.cpp \
	AdminManager.cpp \
	ArtisanManager.cpp \
	AttackableCreature.cpp \
	AttackableStaticNpc.cpp \
	BadgeRegion.cpp \
	BadgeRegionFactory.cpp \
	Bank.cpp \
	BankTerminal.cpp \
	BazaarTerminal.cpp \
	Buff.cpp \
	BuffDBItem.cpp \
	BuffEvent.cpp \
	BuffManager.cpp \
	BugJar.cpp \
	BuildingFactory.cpp \
	BuildingObject.cpp \
	Camp.cpp \
	CampRegion.cpp \
	CampTerminal.cpp \
	CellFactory.cpp \
	CellObject.cpp \
	ChanceCube.cpp \
	CharacterBuilderTerminal.cpp \
	CharacterLoginHandler.cpp \
	CharSheetManager.cpp \
	City.cpp \
	CityFactory.cpp \
	CloningTerminal.cpp \
	CombatManager.cpp \
	Container.cpp \
	ContainerObjectFactory.cpp \
	Conversation.cpp \
	ConversationManager.cpp \
	CraftBatch.cpp \
	CraftingManager.cpp \
	CraftingSession.cpp \
	CraftingSessionFactory.cpp \
	CraftingSessionHelper.cpp \
	CraftingStation.cpp \
	CraftingTool.cpp \
	CreatureEventFunctions.cpp \
	CreatureFactory.cpp \
	CreatureObject.cpp \
	CreatureSpawnRegion.cpp \
	CurrentResource.cpp \
	Datapad.cpp \
	DatapadFactory.cpp \
	Deed.cpp \
	DraftSchematic.cpp \
	DraftSlot.cpp \
	DraftWeight.cpp \
	ElevatorTerminal.cpp \
	EnqueueValidator.cpp \
	EntertainerManager.cpp \
	EquipManager.cpp \
	EVAbility.cpp \
	EVCmdProperty.cpp \
	EVPosture.cpp \
	EVQueueSize.cpp \
	EVState.cpp \
	EVSurveySample.cpp \
	EVWeapon.cpp \
	FactoryBase.cpp \
	FactoryCrate.cpp \
	FactoryFactory.cpp \
	FactoryObject.cpp \
	FillerNPC.cpp \
	Firework.cpp \
	FireworkManager.cpp \
	Food.cpp \
	ForageManager.cpp \
	Furniture.cpp \
	GroupManager.cpp \
	GroupManagerHandler.cpp \
	Ham.cpp \
	HamProperty.cpp \
	HamService.cpp \
	HarvesterFactory.cpp \
	HarvesterObject.cpp \
	Heightmap.cpp \
	HouseFactory.cpp \
	HouseObject.cpp \
	ImageDesignManager.cpp \
	Instrument.cpp \
	InsuranceTerminal.cpp \
	IntangibleFactory.cpp \
	IntangibleObject.cpp \
	Inventory.cpp \
	InventoryFactory.cpp \
	Item.cpp \
	ItemFactory.cpp \
	LairObject.cpp \
	ManufacturingSchematic.cpp \
	MedicHandlerHelpers.cpp \
	Medicine.cpp \
	MedicManager.cpp \
	MissionBag.cpp \
	MissionFactory.cpp \
	MissionManager.cpp \
	MissionObject.cpp \
	MissionTerminal.cpp \
	MountObject.cpp \
	MovingObject.cpp \
	noiseutils.cpp \
	nonPersistantObjectFactory.cpp \
	NonPersistentItemFactory.cpp \
	NonPersistentNpcFactory.cpp \
	NpcManager.cpp \
	NPCObject.cpp \
	ObjControllerCommandMessage.cpp \
	ObjControllerEvent.cpp \
	Object.cpp \
	ObjectContainer.cpp \
	ObjectController.cpp \
	ObjectControllerCommandMap.cpp \
	ObjectControllerDispatch.cpp \
	ObjectFactory.cpp \
	ObjectFactoryCallback.cpp \
	OCAdminHandlers.cpp \
	OCBioEngineerHandlers.cpp \
	OCBountyHunterHandlers.cpp \
	OCBrawlerHandlers.cpp \
	OCCallbackHandlers.cpp \
	OCCarbineerHandlers.cpp \
	OCCharacterSheethandlers.cpp \
	OCCombatHandlers.cpp \
	OCCombatMedicHandlers.cpp \
	OCCommandoHandlers.cpp \
	OCCommonHandlers.cpp \
	OCContactListsHandlers.cpp \
	OCCrateHandlers.cpp \
	OCCreatureHandlerHandlers.cpp \
	OCDatapadHandlers.cpp \
	OCDataTransformhandlers.cpp \
	OCDestroyHandlers.cpp \
	OCDoctorHandlers.cpp \
	OCEntertainerHandlers.cpp \
	OCFencerHandlers.cpp \
	OCForceDefenseHandlers.cpp \
	OCForceEnhancementHandlers.cpp \
	OCForceHealingHandlers.cpp \
	OCForceLightsaberHandlers.cpp \
	OCForcePowerHandlers.cpp \
	OCGroupHandlers.cpp \
	OCMarksmanHandlers.cpp \
	OCMedicHandlers.cpp \
	OCMissionHandlers.cpp \
	OCNpcConversationhandlers.cpp \
	OCPetHandlers.cpp \
	OCPikemanHandlers.cpp \
	OCPistoleerHandlers.cpp \
	OCPostureHandlers.cpp \
	OCRangerHandlers.cpp \
	OCResourceContainerHandlers.cpp \
	OCRiflemanHandlers.cpp \
	OCScoutHandlers.cpp \
	OCSkillHandlers.cpp \
	OCSmugglerHandlers.cpp \
	OCSpatialHandlers.cpp \
	OCSquadLeaderHandlers.cpp \
	OCStructureHandlers.cpp \
	OCSwordsmanHandlers.cpp \
	OCTerasKasiHandlers.cpp \
	OCTradeHandlers.cpp \
	PersistentNpcFactory.cpp \
	PlayerEventFunctions.cpp \
	PlayerObject.cpp \
	PlayerObjectFactory.cpp \
	PlayerStructure.cpp \
	PlayerStructureTerminal.cpp \
	ProcessValidator.cpp \
	PVHam.cpp \
	PVPosture.cpp \
	PVState.cpp \
	QTRegion.cpp \
	QTRegionFactory.cpp \
	QuadTree.cpp \
	QuadTreeNode.cpp \
	QuestGiver.cpp \
	RadialMenu.cpp \
	RadialMenuItem.cpp \
	RegionFactory.cpp \
	RegionObject.cpp \
	Resource.cpp \
	ResourceCategory.cpp \
	ResourceCollectionCommand.cpp \
	ResourceCollectionManager.cpp \
	ResourceContainer.cpp \
	ResourceContainerFactory.cpp \
	ResourceManager.cpp \
	ResourceType.cpp \
	SchematicGroup.cpp \
	SchematicManager.cpp \
	Scout.cpp \
	ScoutManager.cpp \
	SendSystemMailMessage.cpp \
	Shuttle.cpp \
	ShuttleFactory.cpp \
	Skill.cpp \
	SkillManager.cpp \
	SpawnRegion.cpp \
	SpawnRegionFactory.cpp \
	StaticObject.cpp \
	Stomach.cpp \
	StructureManager.cpp \
	StructureManagerCallbackHandler.cpp \
	StructureManagerCommandMap.cpp \
	StructureManagerUIManager.cpp \
	SurveyTool.cpp \
	TangibleFactory.cpp \
	TangibleObject.cpp \
	Terminal.cpp \
	TerminalFactory.cpp \
	TicketCollector.cpp \
	TicketCollectorFactory.cpp \
	Trade.cpp \
	TradeManager.cpp \
	Trainer.cpp \
	TravelMapHandler.cpp \
	TravelTerminal.cpp \
	TravelTicket.cpp \
	TreasuryManager.cpp \
	Tutorial.cpp \
	UIButton.cpp \
	UICustomWindows.cpp \
	UIDropdownBox.cpp \
	UIElement.cpp \
	UIInputBox.cpp \
	UIInputField.cpp \
	UIListBox.cpp \
	UIManager.cpp \
	UIMessageBox.cpp \
	UITransferBox.cpp \
	UIWindow.cpp \
	VehicleController.cpp \
	VehicleControllerFactory.cpp \
	WaypointFactory.cpp \
	WaypointObject.cpp \
	Weapon.cpp \
	Wearable.cpp \
	WeightsBatch.cpp \
	WorldConfig.cpp \
	WorldManager.cpp \
	WorldManagerDataBaseHandlers.cpp \
	WorldManagerNPCHandlers.cpp \
	WorldManagerObjectHandlers.cpp \
	WorldManagerPlayerHandlers.cpp \
	ZoneServer.cpp \
	ZoneTree.cpp
	
zoneserver_CPPFLAGS = $(MYSQL_CFLAGS) $(MYSQL_CFLAGS) -fno-strict-aliasing -Wno-overflow -Wno-invalid-offsetof -Wno-write-strings
zoneserver_LDADD = $(MYSQL_LDFLAGS) \
  $(BOOST_LDFLAGS) \
  $(BOOST_REGEX_LIB) \
  $(BOOST_THREAD_LIB) \
  $(BOOST_SYSTEM_LIB) \
  -lglog \
  -llua \
  -ltolua++ \
  -lspatialindex \
  -ltbb \
  -lnoise \
  $(top_builddir)/src/Utils/libutils.la \
  $(top_builddir)/src/Common/libcommon.la \
  $(top_builddir)/src/DatabaseManager/libdatabasemanager.la \
  $(top_builddir)/src/NetworkManager/libnetworkmanager.la \
  $(top_builddir)/src/ScriptEngine/libscriptengine.la \
  $(top_builddir)/src/MessageLib/libmessagelib.la \
  $(top_builddir)/src/SwgProtocol/libswgprotocol.la
